Upgrade to Spring Boot 3.4.1 + Spring AI for Tomcat 11 / JDK 19
Closes #27

MochaHost upgraded to Tomcat 11.0.0 + JDK 19.0.2, enabling full
modern stack:

Spring Boot: 2.7.18 -> 3.4.1
- All javax.* imports -> jakarta.* (persistence, validation, servlet, mail)
- SecurityConfig: chain DSL -> lambda DSL (Spring Security 6.x)
- @EnableGlobalMethodSecurity -> @EnableMethodSecurity
- .antMatchers -> .requestMatchers

Java: 1.8 -> 17
- var declarations restored
- List.of(), Map.of() restored
- Switch expressions restored
- Collections.singletonList -> List.of

JWT: jjwt 0.11.5 -> 0.12.6
- .setSubject -> .subject
- .setSigningKey -> .verifyWith
- .parseClaimsJws -> .parseSignedClaims

Dependencies:
- mysql:mysql-connector-java -> com.mysql:mysql-connector-j (managed)
- javax.xml.bind:jaxb-api -> jakarta.xml.bind:jakarta.xml.bind-api
- Added spring-ai-anthropic-spring-boot-starter 1.0.0-M5
- Restored Spring AI config in application.yml
- web.xml: Servlet 4.0 -> 6.0 namespace

All 41 tests pass. WAR builds at 126MB (includes Spring AI).

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>